Fix missing background color

--- a/src/global/styles/colors.scss
+++ b/src/global/styles/colors.scss
@@ -8,7 +8,8 @@
   // Accents
   --color-accent: #cd7f32;
 
-  // Backgrounds
+  // Absolutes
+  --color-background: #fff;
 
   // Alphas
   --color-primary-90: rgba(46, 55, 67, .9);
